--- a/src/main/resources/templates/admin/voucher/index.html
+++ b/src/main/resources/templates/admin/voucher/index.html
@@ -1,72 +1,79 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{admin/layouts/index.html}">
 <head>
     <title>Discount Codes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container mt-4">
-    <div class="row">
-        <div class="col-6">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Search">
-                <button class="btn btn-primary" type="button">Tìm kiếm</button>
+
+<section layout:fragment="content">
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-6">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Search">
+                    <button class="btn btn-primary" type="button">Tìm kiếm</button>
+                </div>
+            </div>
+            <div class="col-6 text-end">
+                <a th:href="@{/voucher/create}" class="btn btn-success">Tạo mã giảm giá</a>
             </div>
         </div>
-        <div class="col-6 text-end">
-            <button class="btn btn-success">Tạo mã giảm giá</button>
+        <div class="row">
+            <div class="col-12">
+                <label for="filter">Filter:</label>
+                <select id="filter" multiple class="form-select mb-3">
+                    <option value="1">Đang giảm</option>
+                    <option value="2">Đã hết</option>
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Mã giảm giá</th>
+                        <th>Phần trăm giảm</th>
+                        <th>Giá trị tối thiểu</th>
+                        <th>Thời gian</th>
+                        <th>Trạng thái</th>
+                        <th>Hành động</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tbody>
+                    <tr th:each="voucher : ${vouchers}">
+                        <td th:text="${voucher.tenKhuyenMai}"></td>
+                        <td th:text="${voucher.phanTramGiam + '%'}"></td>
+                        <td th:text="${voucher.giaTriToiThieu}"></td>
+                        <td>
+                            <span th:text="${#dates.format(voucher.ngayBatDau, 'dd MMMM yyyy')}"></span>
+                            <span> - </span>
+                            <span th:text="${#dates.format(voucher.ngayKetThuc, 'dd MMMM yyyy')}"></span>
+                        </td>
+                        <td th:text="${voucher.trangThai ? 'Bật': 'Tắt'}"></td>
+                        <td>
+                            <a th:href="@{/voucher/edit/{id}(id=${voucher.id})}">
+                                <i class="bi bi-pencil"></i>
+                            </a>
+                            <a th:href="@{/voucher/toggle/{id}(id=${voucher.id})}">
+                                <i th:class="${voucher.trangThai ? 'bi bi-toggle-on' : 'bi bi-toggle-off'}"></i>
+                            </a>
+                            <a th:href="@{/voucher/delete/{id}(id=${voucher.id})}">
+                                <i class="bi bi-trash"></i>
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-12">
-            <label for="filter">Filter:</label>
-            <select id="filter" multiple class="form-select mb-3">
-                <option value="1">Đang giảm</option>
-                <option value="2">Đã hết</option>
-            </select>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>Mã giảm giá</th>
-                    <th>Phần trăm giảm</th>
-                    <th>Giá trị tối thiểu</th>
-                    <th>Thời gian</th>
-                    <th>Hành động</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tbody>
-                <tr th:each="voucher : ${vouchers}">
-                    <td th:text="${voucher.tenKhuyenMai}"></td>
-                    <td th:text="${voucher.phanTramGiam + '%'}"></td>
-                    <td th:text="${voucher.giaTriToiThieu}"></td>
-                    <td>
-                        <span th:text="${#dates.format(voucher.ngayBatDau, 'dd MMMM yyyy')}"></span>
-                        <span> - </span>
-                        <span th:text="${#dates.format(voucher.ngayKetThuc, 'dd MMMM yyyy')}"></span>
-                    </td>
-                    <td>
-                        <a th:href="@{/voucher/{id}(id=${voucher.id})}">
-                            <i class="bi bi-pencil"></i>
-                        </a>
-                        <a th:href="@{/voucher/toggle/{id}(id=${voucher.id})}">
-                            <i th:class="${voucher.trangThai ? 'bi bi-toggle-on' : 'bi bi-toggle-off'}"></i>
-                        </a>
-                        <a th:href="@{/voucher/toggle/{id}(id=${voucher.id})}">
-                            <i class="bi bi-trash"></i>
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+</section>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
