--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -31,6 +31,9 @@
     <link th:href="@{/admin/css/virtual-select.min.css}" rel="stylesheet">
 
     <link th:href="@{/admin/css/bootstrap-select.min.css}" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
 
 </head>
 
