--- a/src/main/resources/templates/admin/voucher/index.html
+++ b/src/main/resources/templates/admin/voucher/index.html
@@ -4,6 +4,8 @@
 <head>
     <title>Discount Codes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
 </head>
 <body>
 
@@ -12,12 +14,12 @@
         <div class="row">
             <div class="col-6">
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" placeholder="Tìm kiếm">
                     <button class="btn btn-primary" type="button">Tìm kiếm</button>
                 </div>
             </div>
             <div class="col-6 text-end">
-                <a th:href="@{/voucher/create}" class="btn btn-success">Tạo mã giảm giá</a>
+                <a th:href="@{/admin/voucher/create}" class="btn btn-success">Tạo mã giảm giá</a>
             </div>
         </div>
         <div class="row">
@@ -34,6 +36,7 @@
                 <table class="table">
                     <thead>
                     <tr>
+                        <th>id</th>
                         <th>Mã giảm giá</th>
                         <th>Phần trăm giảm</th>
                         <th>Giá trị tối thiểu</th>
@@ -45,23 +48,24 @@
                     <tbody>
                     <tbody>
                     <tr th:each="voucher : ${vouchers}">
+                        <td th:text="${voucher.id}"></td>
                         <td th:text="${voucher.tenKhuyenMai}"></td>
                         <td th:text="${voucher.phanTramGiam + '%'}"></td>
                         <td th:text="${voucher.giaTriToiThieu}"></td>
                         <td>
-                            <span th:text="${#dates.format(voucher.ngayBatDau, 'dd MMMM yyyy')}"></span>
+                            <span th:text="${#dates.format(voucher.ngayBatDau, 'dd/MM/yyyy')}"></span>
                             <span> - </span>
-                            <span th:text="${#dates.format(voucher.ngayKetThuc, 'dd MMMM yyyy')}"></span>
+                            <span th:text="${#dates.format(voucher.ngayKetThuc, 'dd/MM/yyyy')}"></span>
                         </td>
                         <td th:text="${voucher.trangThai ? 'Bật': 'Tắt'}"></td>
                         <td>
-                            <a th:href="@{/voucher/edit/{id}(id=${voucher.id})}">
+                            <a th:href="@{/admin/voucher/edit/{id}(id=${voucher.id})}">
                                 <i class="bi bi-pencil"></i>
                             </a>
-                            <a th:href="@{/voucher/toggle/{id}(id=${voucher.id})}">
+                            <a th:href="@{/admin/voucher/toggle/{id}(id=${voucher.id})}">
                                 <i th:class="${voucher.trangThai ? 'bi bi-toggle-on' : 'bi bi-toggle-off'}"></i>
                             </a>
-                            <a th:href="@{/voucher/delete/{id}(id=${voucher.id})}">
+                            <a th:href="@{/admin/voucher/delete/{id}(id=${voucher.id})}">
                                 <i class="bi bi-trash"></i>
                             </a>
                         </td>
@@ -75,5 +79,6 @@
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
