--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -60,5 +60,6 @@
 	<script th:src="@{/admin/js/jquery.validation.min.js}"></script>
 	<script th:src="@{/admin/js/khachhang/khachHang.js}"></script>
 	<script th:src="@{/admin/js/diachi/diaChi.js}"></script>
+	<script th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
 </body>
 </html>
