--- a/src/main/resources/templates/admin/voucher/edit.html
+++ b/src/main/resources/templates/admin/voucher/edit.html
@@ -16,27 +16,28 @@
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="tenKhuyenMai">Tên khuyến mãi:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="tenKhuyenMai" th:field="*{tenKhuyenMai}" />
+                    <input type="text" class="form-control" id="tenKhuyenMai" th:field="*{tenKhuyenMai}" required/>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="ngayBatDau">Ngày bắt đầu:</label>
                 <div class="col-sm-3">
-                    <input type="date" class="form-control" id="ngayBatDau" th:field="*{ngayBatDau}" />
+                    <input type="date" class="form-control" id="ngayBatDau" th:field="*{ngayBatDau}" required/>
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="ngayKetThuc">Ngày kết thúc:</label>
                 <div class="col-sm-3">
-                    <input type="date" class="form-control" id="ngayKetThuc" th:field="*{ngayKetThuc}" />
+                    <input type="date" class="form-control" id="ngayKetThuc" th:field="*{ngayKetThuc}" required/>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="phanTramGiam">Phần trăm giảm:</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" id="phanTramGiam" th:field="*{phanTramGiam}" />
+                    <input type="number" class="form-control" id="phanTramGiam" th:field="*{phanTramGiam}" required/>
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="giaTriToiThieu">Giá trị tối thiểu:</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}" />
+                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}"  required
+                    />
                 </div>
             </div>
             <div class="form-group row">
