--- a/src/main/resources/templates/admin/voucher/index.html
+++ b/src/main/resources/templates/admin/voucher/index.html
@@ -5,7 +5,6 @@
     <title>Discount Codes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
 </head>
 <body>
 
@@ -24,17 +23,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-2">
+            <div class="col-1">
                 <label for="size">Số lượng trong một trang</label>
             </div>
-            <div class="col-2">
+            <div class="col-1">
                 <select class="form-select" aria-label="Default select example" id="size" >
                     <option value="10" selected>10</option>
                     <option value="20" th:selected="${size == 20}">20</option>
                     <option value="50" th:selected="${size == 50}">50</option>
                 </select>
             </div>
-            <div class="col-2">
+            <div class="col-1">
                 <label class="col-form-label" for="status">Trạng thái:</label>
             </div>
             <div class="col-2">
@@ -44,17 +43,24 @@
                     <option value="OFF" th:selected="${status == 'OFF'}">Đang Tắt</option>
                 </select>
             </div>
-            <div class="col-2">
-                <label class="col-form-label " for="time">Thời gian:</label>
+            <div class="col-1">
+                <label class="col-form-label " for="discountRange">Lọc theo phần trăm giảm:</label>
             </div>
             <div class="col-2">
-                <select class="form-select" aria-label="Default select example" id="time">
-                    <option value="ALL" selected>Tất cả</option>
-                    <option value="ON" th:selected="${date == 'ON'}">Khả dụng</option>
-                    <option value="OFF" th:selected="${date == 'OFF'}">Hết hạn</option>
-                    <option value="PENDING" th:selected="${date == 'PENDING'}">Chưa mở</option>
-                </select>
+                <div id="discountRange"></div>
+                <span id="selectedRange"></span>
+                <input id="startRange" type="hidden" th:value="${start}">
+                <input id="endRange" type="hidden" th:value="${end}">
             </div>
+            <div class="col-2">
+<!--                <div class="input-group">-->
+<!--                    <input type="text" class="form-control" id="dateRange" autocomplete="off"/>-->
+<!--                    <div class="input-group-append">-->
+<!--                        <span class="input-group-text"><i class="far fa-calendar-alt"></i></span>-->
+<!--                    </div>-->
+<!--                    <input type="hidden" name="dateFrom" th:field="*{dateFrom}"/>-->
+<!--                    <input type="hidden" name="dateTo" th:field="*{dateTo}"/>-->
+<!--                </div>-->
         </div>
         <div class="row mt-4">
             <div class="col-12">
