--- a/src/main/resources/templates/admin/voucher/edit.html
+++ b/src/main/resources/templates/admin/voucher/edit.html
@@ -17,27 +17,34 @@
                 <label class="col-sm-3 col-form-label text-end" for="tenKhuyenMai">Tên khuyến mãi:</label>
                 <div class="col-sm-9">
                     <input type="text" class="form-control" id="tenKhuyenMai" th:field="*{tenKhuyenMai}" required/>
+                    <small class="text-danger" th:errors="*{tenKhuyenMai}"></small>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="ngayBatDau">Ngày bắt đầu:</label>
                 <div class="col-sm-3">
                     <input type="date" class="form-control" id="ngayBatDau" th:field="*{ngayBatDau}" required/>
+                    <small class="text-danger" th:errors="*{ngayBatDau}"></small>
+
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="ngayKetThuc">Ngày kết thúc:</label>
                 <div class="col-sm-3">
                     <input type="date" class="form-control" id="ngayKetThuc" th:field="*{ngayKetThuc}" required/>
+                    <small class="text-danger" th:errors="*{ngayKetThuc}"></small>
+
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="phanTramGiam">Phần trăm giảm:</label>
                 <div class="col-sm-3">
                     <input type="number" class="form-control" id="phanTramGiam" th:field="*{phanTramGiam}" required/>
+                    <small class="text-danger" th:errors="*{phanTramGiam}"></small>
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="giaTriToiThieu">Giá trị tối thiểu:</label>
                 <div class="col-sm-3">
                     <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}"  required
                     />
+                    <small class="text-danger" th:errors="*{giaTriToiThieu}"></small>
                 </div>
             </div>
             <div class="form-group row">
