--- a/src/main/resources/templates/admin/voucher/index.html
+++ b/src/main/resources/templates/admin/voucher/index.html
@@ -5,6 +5,8 @@
     <title>Discount Codes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script th:src="@{/admin/js/khuyenmai/khuyenmai.js}"></script>
+
 </head>
 <body>
 
@@ -113,7 +115,7 @@
                         <li th:if="${vouchers.totalPages > 0}" class="page-link"
                             th:each="pageNumber : ${pageNumbers}">
                             <a href="#"
-                               th:onclick="'search('+${pageNumber}')'"
+                               th:onclick="'search('+${pageNumber}+')'"
                                th:text="${pageNumber}"
                                th:class="${pageNumber==vouchers.number + 1} ? active"
                                class="page-link"
@@ -128,6 +130,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-
 </body>
 </html>
