--- a/src/main/resources/templates/admin/voucher/edit.html
+++ b/src/main/resources/templates/admin/voucher/edit.html
@@ -9,42 +9,42 @@
 
 <section layout:fragment="content">
     <div class="container">
-        <h2 th:if="${voucher.id > 0}">Sửa mã giảm giá</h2>
-        <h2 th:unless="${voucher.id > 0}">Thêm mã giảm giá</h2>
+        <h2 th:if="${voucher != null && voucher.id > 0}">Sửa mã giảm giá</h2>
+        <h2 th:unless="${voucher != null && voucher.id > 0}">Thêm mã giảm giá</h2>
         <form method="post" th:object="${voucher}">
             <input type="hidden" id="id" th:field="*{id}"/>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="tenKhuyenMai">Tên khuyến mãi:</label>
                 <div class="col-sm-9">
                     <input type="text" class="form-control" id="tenKhuyenMai" th:field="*{tenKhuyenMai}" required/>
-                    <small class="text-danger" th:errors="*{tenKhuyenMai}"></small>
+                    <p th:if="${#fields.hasErrors('tenKhuyenMai')}" th:errorclass="error" th:errors="*{tenKhuyenMai}"></p>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="ngayBatDau">Ngày bắt đầu:</label>
                 <div class="col-sm-3">
                     <input type="date" class="form-control" id="ngayBatDau" th:field="*{ngayBatDau}" required/>
-                    <small class="text-danger" th:errors="*{ngayBatDau}"></small>
+                    <p th:if="${#fields.hasErrors('ngayBatDau')}" th:errorclass="error" th:errors="*{ngayBatDau}"></p>
 
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="ngayKetThuc">Ngày kết thúc:</label>
                 <div class="col-sm-3">
                     <input type="date" class="form-control" id="ngayKetThuc" th:field="*{ngayKetThuc}" required/>
-                    <small class="text-danger" th:errors="*{ngayKetThuc}"></small>
+                    <p th:if="${#fields.hasErrors('ngayKetThuc')}" th:errorclass="error" th:errors="*{ngayKetThuc}"></p>
 
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="phanTramGiam">Phần trăm giảm:</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" id="phanTramGiam" th:field="*{phanTramGiam}" required/>
-                    <small class="text-danger" th:errors="*{phanTramGiam}"></small>
+                    <input type="number" class="form-control" id="phanTramGiam" th:field="*{phanTramGiam}" required min="0"/>
+                    <p th:if="${#fields.hasErrors('phanTramGiam')}" th:errorclass="error" th:errors="*{phanTramGiam}"></p>
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="giaTriToiThieu">Giá trị tối thiểu:</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}"  required
+                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}" min="0" required
                     />
-                    <small class="text-danger" th:errors="*{giaTriToiThieu}"></small>
+                    <p th:if="${#fields.hasErrors('giaTriToiThieu')}" th:errorclass="error" th:errors="*{giaTriToiThieu}"></p>
                 </div>
             </div>
             <div class="form-group row">
