--- a/src/main/resources/templates/admin/voucher/edit.html
+++ b/src/main/resources/templates/admin/voucher/edit.html
@@ -16,20 +16,20 @@
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="tenKhuyenMai">Tên khuyến mãi:</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="tenKhuyenMai" th:field="*{tenKhuyenMai}" required/>
+                    <input type="text" class="form-control" id="tenKhuyenMai" th:field="*{tenKhuyenMai}" />
                     <p th:if="${#fields.hasErrors('tenKhuyenMai')}" th:errorclass="error" th:errors="*{tenKhuyenMai}"></p>
                 </div>
             </div>
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="ngayBatDau">Ngày bắt đầu:</label>
                 <div class="col-sm-3">
-                    <input type="date" class="form-control" id="ngayBatDau" th:field="*{ngayBatDau}" required/>
+                    <input type="date" class="form-control" id="ngayBatDau" th:field="*{ngayBatDau}" />
                     <p th:if="${#fields.hasErrors('ngayBatDau')}" th:errorclass="error" th:errors="*{ngayBatDau}"></p>
 
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="ngayKetThuc">Ngày kết thúc:</label>
                 <div class="col-sm-3">
-                    <input type="date" class="form-control" id="ngayKetThuc" th:field="*{ngayKetThuc}" required/>
+                    <input type="date" class="form-control" id="ngayKetThuc" th:field="*{ngayKetThuc}" />
                     <p th:if="${#fields.hasErrors('ngayKetThuc')}" th:errorclass="error" th:errors="*{ngayKetThuc}"></p>
 
                 </div>
@@ -37,12 +37,12 @@
             <div class="form-group row">
                 <label class="col-sm-3 col-form-label text-end" for="phanTramGiam">Phần trăm giảm:</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" id="phanTramGiam" th:field="*{phanTramGiam}" required min="0"/>
+                    <input type="number" class="form-control" id="phanTramGiam" th:field="*{phanTramGiam}" />
                     <p th:if="${#fields.hasErrors('phanTramGiam')}" th:errorclass="error" th:errors="*{phanTramGiam}"></p>
                 </div>
                 <label class="col-sm-3 col-form-label text-end" for="giaTriToiThieu">Giá trị tối thiểu:</label>
                 <div class="col-sm-3">
-                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}" min="0" required
+                    <input type="number" class="form-control" id="giaTriToiThieu" th:field="*{giaTriToiThieu}"
                     />
                     <p th:if="${#fields.hasErrors('giaTriToiThieu')}" th:errorclass="error" th:errors="*{giaTriToiThieu}"></p>
                 </div>
