--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -21,7 +21,7 @@
     <link th:href="@{/admin/css/sb-admin-2.min.css}" rel="stylesheet">
 
     <!-- Custom styles for this page -->
-    <link th:href="@{/admin/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+    <!-- <link th:href="@{/admin/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
     <link th:href="@{/admin/css/myCSS.css}" rel="stylesheet">
@@ -51,6 +51,7 @@
     <script th:src="@{/admin/imgLibr/js/locales/es.js}" type="text/javascript"></script>
     <script th:src="@{/admin/imgLibr/themes/fa5/theme.js}" type="text/javascript"></script>
     <script th:src="@{/admin/imgLibr/themes/explorer-fa5/theme.js}" type="text/javascript"></script>
+
 </head>
 
 <body id="page-top">
@@ -183,7 +184,8 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+                <nav id="firstNavIndex"
+                    class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <form class="form-inline">
@@ -208,7 +210,6 @@
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
-
                         <!-- Nav Item - Search Dropdown (Visible Only XS) -->
                         <li class="nav-item dropdown no-arrow d-sm-none">
                             <a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
@@ -436,11 +437,10 @@
     </div>
     <!-- Bootstrap core JavaScript-->
     <!-- <script th:src="@{/admin/vendor/jquery/jquery.min.js}"></script> -->
-    <script th:src="@{/admin/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <!-- <script th:src="@{/admin/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script> -->
 
     <!-- Core plugin JavaScript-->
     <!-- <script th:src="@{/admin/vendor/jquery-easing/jquery.easing.min.js}"></script> -->
-
     <!-- Custom scripts for all pages-->
     <script th:src="@{/admin/js/sb-admin-2.min.js}"></script>
 
@@ -458,7 +458,6 @@
     <!-- My script for select mutiple select option -->
     <script th:src="@{/admin/js/virtual-select.min.js}"></script>
     <script th:src="@{/admin/js/tooltip.min.js}"></script>
-
     <script th:src="@{/admin/js/bootstrap-select.min.js}"></script>
 </body>
 
