--- a/src/main/resources/templates/admin/layouts/index.html
+++ b/src/main/resources/templates/admin/layouts/index.html
@@ -10,7 +10,7 @@
 <link th:href="@{/admin/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/admin/css/fonts-googleapis.css}">
 <link th:href="@{/admin/css/sb-admin-2.min.css}" rel="stylesheet">
-<link th:href="@{/admin/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+<!-- <link th:href="@{/admin/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet"> -->
 <link th:href="@{/admin/css/sweet-alert.min.css}" rel="stylesheet">
 <link th:href="@{/admin/css/khachhang/style.css}" rel="stylesheet">
 </head>
@@ -53,9 +53,9 @@
     <script th:src="@{/admin/js/chart-area-demo.js}"></script>
     <script th:src="@{/admin/js/chart-pie-demo.js}"></script> -->
 	<script th:src="@{/admin/js/jquery.easing.min.js}"></script>
-	<script th:src="@{/admin/vendor/datatables/jquery.dataTables.min.js}"></script>
+	<!-- <script th:src="@{/admin/vendor/datatables/jquery.dataTables.min.js}"></script>
 	<script th:src="@{/admin/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
-	<script th:src="@{/admin/js/demo/datatables-demo.js}"></script>
+	<script th:src="@{/admin/js/demo/datatables-demo.js}"></script> -->
 	<script th:src="@{/admin/js/sweet-alert.min.js}"></script>
 	<script th:src="@{/admin/js/jquery.validation.min.js}"></script>
 	<script th:src="@{/admin/js/khachhang/khachHang.js}"></script>
