--- a/src/main/resources/templates/admin/khach-hang/danhSach.html
+++ b/src/main/resources/templates/admin/khach-hang/danhSach.html
@@ -43,7 +43,7 @@
 		<!-- Page Heading -->
 		<!-- DataTales Example -->
 		<div class="card shadow mb-4 mt-5">
-			<div class="card-header py-3">
+				<div class="card-header py-3">
 				<div class="row p-3">
 					<div class="col-md-2">
 						<h6 class="m-2 font-weight-bold text-primary">Dữ liệu khách hàng</h6>
@@ -122,9 +122,12 @@
 					
 				</div>
 			</div>
+		</div>
+		<div class="card shadow mb-4 mt-5">
+			
 			<div class="card-body">
-				<div class="table-responsive">
-					<table class="table table-bordered text-center" width="100%" cellspacing="0">
+				<div class="table">
+					<table class="table  text-center" width="100%" cellspacing="0">
 						<thead>
 							<tr>
 								<th>
@@ -198,7 +201,6 @@
 										</a></li>
 									</ul>
 								</nav> 
-								<h1>Không có gì</h1>
 							</th:block>
 									<th:block th:if="${input ==null}">
 										<th:block th:if="${trangThai !=null && trangThai != 2}">
@@ -225,7 +227,6 @@
 												</a></li>
 											</ul>
 										</nav>
-										<h1>Trạng thái</h1>
 								</th:block>
 							</th:block>
 							<th:block th:if=" ${trangThai == null }">
@@ -253,7 +254,6 @@
 										</a></li>
 									</ul>
 								</nav>
-								<h1>Trạng thái</h1>
 								</th:block>
 								
 							</th:block>
@@ -284,7 +284,6 @@
 										</a></li>
 									</ul>
 								</nav>
-								<h1>Cả 2</h1>
 									</th:block>
 						</div>
 					</div>
